--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@ ext-center text-teal">Connect Me</h1>
 		
 	</div>		
 		<!-- footer -->
-		<footer class="footer bg-teal text-center">
+		<footer class="footer bg-grey text-center">
 
 
 					<div class="container-fluid">
