--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		
 	</div>		
 		<!-- footer -->
-		<footer class="footer bg-teal text-center">
+		<footer class="footer bg-grey text-center">
 
 
 					<div class="container-fluid">
