--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
 		
 	</div>		
 		<!-- footer -->
-		<footer class="footer bg-teal text-center">
+		<footer class="footer bg-grey text-center">
 
 
 					<div class="container-fluid">
