fixed Connect me header

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="panel-body bg-white">
-					<h1 class="t
-ext-center text-teal">Connect Me</h1>
+					<h1 class="text-center text-teal">Connect Me</h1>
 					<div class="container-fluid">
 						<div class="col-sm-4">
 						<a href="https://github.com/bthipavo"><img src="assets/images/github_square-128.png" alt="github" width="70" height="70"></a>
