added break lines

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 			<div class="col-sm-8">
 				<div class="panel-body bg-white">
 					<h1 class="text-teal">About Me</h1>
+					<hr width="95%">
 					<p><img class="aboutme pull-left" src="assets/images/me.jpg" title = 'Picture of Becky'>
 					Becky is a graduate of UCSC and currently a business systems analyst. She loves her dog,  food, and life. She is always looking for new things to do and hobbys to get addicted to.
 					<br>
@@ -62,6 +63,7 @@
 			<div class="col-sm-4">
 				<div class="panel-body bg-white">
 					<h1 class="text-center text-teal">Connect Me</h1>
+					<hr width="95%">
 					<div class="container-fluid">
 						<div class="col-sm-4">
 						<a href="https://github.com/bthipavo"><img src="assets/images/github_square-128.png" alt="github" width="70" height="70"></a>
