--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
 			<div class="col-sm-8">
 				<div class="panel-body bg-white">
 					<h1 class="text-teal">Portfolio</h1>
+					<hr width="95%">
 
 					<div class="row">
 						<!-- <div class="container"> -->
@@ -82,6 +83,7 @@
 			<div class="col-sm-4">
 				<div class="panel-body bg-white">
 					<h1 class="text-center text-teal">Connect Me</h1>
+					<hr width="95%">
 					<div class="container-fluid">
 						<div class="col-sm-4">
 						<a href="https://github.com/bthipavo"><img src="assets/images/github_square-128.png" alt="github" width="70" height="70"></a>
